# swagger.yml
@@ -7,7 +7,7 @@ info:
   version: "0.1.0"
 
 servers:
-  - url: "/"
+  - url: "/api"
 
 components:
   schemas:
@@ -22,6 +22,27 @@ components:
           type: "string"
 
 paths:
+  /usuarios:
+    get:
+      operationId: "topology_scan.scan_all"
+      tags:
+        - "Usuarios"
+      summary: "Regresar json con todos los usuarios existentes en los routers, incluyendo nombre, permisos y dispositivos donde existe (URL a routers donde exista cada usuario)."
+      responses:
+        "200":
+          description: "Se encontro ususarios"
+  
+  /routes:
+    get:
+      operationId: "topology_scan.scan_all"
+      tags:
+        - "Routers"
+      summary: "Regresa la información general de todos los routers de la topología. Incluyendo Nombre, IP loopback, IP administrativa, rol, empresa, Sistema operativo y ligas a las interfaces activas."
+      responses:
+        "200":
+          description: "Se encontraron Routers"
+  
+
   /topologia:
     
     get:
